welcome.lessons.welcome.bat.bool1.SleepIn.scala.error
sleepIn:5: error: reassignment to val
	if (vacation = true){
                     ^sleepIn:5: error: type mismatch;
 found   : Unit
 required: Boolean
	if (vacation = true){
        ^